Rest-logg uppdatering

--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -772,7 +772,7 @@ Even though the system fulfils the requirements, it doesn't mean it's bug free. 
 \chapter{ Conclusion}
 
 \section{Discussion}
-Even though the system turned out as intended, there are things left to do before it can be used clinically. First of all, the system must be tested for more bugs and unintended behavior. This should preferably be done by users other than the developers since the developers know how the system works and can't safely predict what another user will attempt to do. The system must be tested by experts in the field of ophthalmology in order to make sure that the built system actually is a valid solution. This will give the system credibility and make it possible to use it clinically.
+Even though the system turned out as intended, there are things left to do before it can be used clinically. First of all, the system must be tested for more bugs and unintended behaviour. This should preferably be done by users other than the developers since the developers know how the system works and can't safely predict what another user will attempt to do. The system must be tested by experts in the field of ophthalmology in order to make sure that the built system actually is a valid solution. This will give the system credibility and make it possible to use it clinically.
 
 \section{Advantages of a digital system}
 The advantages of a digital system is the ability to change the layout, optotypes and size of the chart without having to manually exchange charts. This will save both time and space as only one screen, a small server and a small Android device is necessary, while also providing easier access to specialized charts that will help patients with different needs. This system will also allow the visual acuity tests to take place in rooms that previously were too small, as the system will display optotypes at a size suitable for the distance the patient is from the monitor.
