Avslutning på logg. Omskrivning av 4.1.3

--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -506,13 +506,13 @@ The design of the application follows the Android design principles by using And
 \end{figure}
 
 \subsection{Server application}
-The server application is written in Java and uses the built-in \textit{Swing} library for drawing the GUI and the images. Swing is a very flexible and easy-to-use library with a lot of great tools for creating a good looking GUI. In our case we won't be needing a very advanced GUI since the main purpose of the server is to render a fullscreen image at all times. This greatly simplifies the implementation of the GUI. Other than the rendering of images, the GUI consists of a small network controller where the user can specify a number of settings. These settings have to be configured for example to what name the server will have on the network. It's also necessary to have settings for the location of the server.
+The server application is written in Java and uses the built-in \textit{Swing} library for drawing the GUI and the images. Swing is a very flexible and easy-to-use library with a lot of great tools for creating a good looking GUI. In our case the server didn't need a very advanced GUI since the main purpose of the server is to render a fullscreen image at all times. This greatly simplifies the implementation of the GUI. Other than the rendering of images, the GUI consists of a small networking control class where the user can specify a number of settings. These settings have to be configured to set what name the server will have on the network. There are no other major settings at this time, but it was designed so that it can be easily expanded if future updates require more settings.
 
-The rendering of images, specifically SVG vector graphic images, will be handled by an \textit{~Apache} library called \textit{Batik}. It is well supported and extensive library for rendering a multitude of different file formats. The SVG files contain information about the optotypes used on the charts. Using procedural positioning of the SVG images, we can easily create a well structured image to render to the screen.
+The rendering of images, specifically SVG vector graphic images, is handled by an \textit{~Apache} library called \textit{Batik}. It is a well supported and extensive library for rendering a multitude of different file formats. The SVG files contain information about the optotypes used on the charts. Using the same procedure as the tablet application to calculate the positions of the SVG images, we can easily create a well structured image to render to the screen.
 
 %The server will also handle the networking on its side, connecting to the Android tablet over a TCP connection. This will be done using a third-party library \textit{Kryonet}. \cite{kryonet} Kryonet is a library that wraps Java's own networking functionality and improves upon it. The library's strong-point is the way it implements serialization of Java objects. Using Kryonet we can without a lot of effort serialize objects, send the object over the network and then deserialize is, getting back the original object with all of its internal structure. 
 
-Network communication will be handled using a submit-poll system. The networking part of the server will receive information from the network and submit it to a thread-safe queue. While this happens, the GUI polls the information from the queue and handles the information. This method is necessary because of how Swing is constructed. Swing runs on a dispatch-thread basis, meaning only the dispatch-thread itself can change things in the GUI. Trying to change things in the GUI from another thread would cause a lot of problems. Now the GUI can try to poll whenever it has time, though tries to do this periodically.  
+When the networking part of the server receives information from the network it is submitted to a thread-safe queue. Separately from this, the GUI pulls the information from the queue and handles the information. This method is necessary because of how Swing is constructed. Swing runs on a dispatch-thread basis, meaning that there is a single event dispatching thread that handles all the incoming events and alters the GUI accordingly. Since the dispatch-thread decides when to update the screen attempting to alter the GUI from another thread simultaneously would result in unknown behaviour and possibly fatal errors, and is therefore prohibited. 
 
 \subsection{Network}
 The network communication between the client and the server consists of two parts. The first part is server detection and the second is server communication. All network communication are handled in threads separate from the main thread using Java's SwingWorker- and Androids AsyncTask class. Both classes allow us to perform network operations in the background, in a separate thread, and once the operations are complete the main thread of the program will automatically get the result.
