--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -219,7 +219,9 @@ The user also have to be able to choose if the current chart should use the Sloa
 \label{fig:optotypes_example1}
 \end{figure}
 
-It is very important that the chart on the monitor displays all optotypes with the correct sizes and positions. In order to do this, the user must to be able control the distance from which the patient is watching the monitor. It is also very important that the correct sizes, in LogMAR (Logarithmic of the Minimum Angle of Resolution), which is a logarithmic unit of measurement dependant on the view angle of a patient \cite{Bailey}, is displayed on the Android device.
+%It is very important that the chart on the monitor displays all optotypes with the correct sizes and positions. In order to do this, the user must to be able control the distance from which the patient is watching the monitor. It is also very important that the correct sizes, in LogMAR (Logarithmic of the Minimum Angle of Resolution), which is a logarithmic unit of measurement dependant on the view angle of a patient \cite{Bailey}, is displayed on the Android device.
+
+It is very important that the chart on the monitor displays all optotypes with the correct sizes and positions. In order to do this, the user must to be able control the distance from which the patient is watching the monitor. The sizes of the the optotypes are measured in LogMAR (Logarithmic of the Minimum Angle of Resolution), which is a logarithmic unit of measurement dependant on the view angle of a patient \cite{Bailey}. This means that the optotypes will be smaller when a patient sits close to the monitor and larger when a patient sits far away. This allows the optician to use the same LogMAR values during visual acuity tests no matter the distance the patient view the monitor.
 
 The intended user for this system should have all the necessary knowledge and education on how to perform an eye examination. The user should not need any more than basic knowledge about an Android device, such as being able to start the device, connect to a wireless network, start an application and how to perform simple Android gestures. This does not mean that it has to be easy to install and set up, though it is a goal for future expansion. 
 
