Axanvisi charts thingy

--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -165,7 +165,7 @@ No automatic update system will be included, instead the user will have to manua
 \section{Requirements}
 %For this project to be considered successful, the system must be able to display the chart chosen by the user. This means that the user have to be able to control which chart type to display on the monitor from an Android device. The types of charts that should be included are the four Axanivis charts, the upper, the lower, the one line and the single optotype chart. The user also has to be able to choose if the current chart should use the Sloan, Tumbling E, HVOT or LEA optotypes.
 
-For this project to be considered successful, the system must be able to display the chart chosen by the user. This means that the user have to be able to control which chart type to display on the monitor from an Android device. The types of charts that should be included are the four Axanivis charts (fig. \ref{fig:axanivis}), which is a project under development by P.G. Söderberg \cite{PGSoderbergOral}.
+For this project to be considered successful, the system must be able to display the chart chosen by the user. This means that the user have to be able to control which chart type to display on the monitor from an Android device. The types of charts that should be included are the four Axanivis charts (fig. \ref{fig:axanivis}), which is a project under development by P.G. Söderberg \cite{PGSoderbergOral}. The Axanivis charts are based on the ETDRS chart but are designed to be displayed on a digital screen instead of being printed on a physical chart. 
 
 \begin{figure}[ht!]
 \centering
@@ -173,20 +173,24 @@ For this project to be considered successful, the system must be able to display
   \centering
   %\includegraphics[width=.5\linewidth]{images/etdrs_top.png}
   \includegraphics[width=50mm]{images/etdrs_top.png}
+  \caption{Axanivis upper chart, based on the first five rows of the ETDRS chart.}
   \label{fig:etdrs_upper1}
 \end{subfigure}%
 \begin{subfigure}{.5\textwidth}
   \centering
   \includegraphics[width=50mm]{images/etdrs_bottom.png}
+  \caption{Axanivis lower chart, based on the last nine rows of the ETDRS chart.}
   \label{fig:etdrs_lower1}
 \end{subfigure}
 \begin{subfigure}{.4\textwidth}
 	\centering
 	\includegraphics[width=50mm]{images/etdrs_one_line.png}
+  \caption{Axanivis one line chart, based on a single column of the ETDRS chart that is turned horizontal.}
 \end{subfigure}
 \begin{subfigure}{.4\textwidth}
 	\centering
 	\includegraphics[width=50mm]{images/etdrs_single.png}
+  \caption{Axanivis single optotype chart. Displays a single optotype at a time.}
 \end{subfigure}
 \caption{The four Axanvis charts}
 \label{fig:axanivis}
