Fixade lite tempusformer

--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -152,15 +152,13 @@ Finally, we have the issue of networking. Our concern was being able to reliably
 %----------------SKRIV MER HÄR!!!!!!!!!----------- (ELLER SKRIV OM!!!!)
 
 \section{Delimitations}
-Due to limits in time and manpower, this project is not intended to result in a complete working system to be used clinically, but rather a working prototype that can be used to evaluate digital visual acuity charts. To complete the project on time, as much as possible of Java's and Android's built-in libraries will be used in order to avoid recreating code that already exists, thus saving time. Neither Java nor Android include libraries for rendering SVG-files and third party libraries will be used instead.
+Due to limits in time and manpower, this project was not intended to result in a complete working system to be used clinically, but rather a working prototype that can be used to evaluate digital visual acuity charts. To complete the project on time, as much as possible of Java's and Android's built-in libraries was used in order to avoid recreating code that already existed, thus saving time. Neither Java nor Android include libraries for rendering SVG-files so third party libraries was used instead.
 
-%Though as SVG-files are going to be used for the rendering of optotypes and neither Java or Android supports it natively third-party libraries will be used.
+We did not evaluate a digital screen's effect on the eye compared to a physical chart nor did we analyze why a chart should have the layouts it has. As the visual acuity charts are made after a very strict specification, no new chart layouts were made. Any new chart we would have created would be considered useless without backing research and they could be misleading and misused by future opticians that in the end, could result in patients getting an inaccurate result.
 
-We will not evaluate a digital screen's effect on the eye compared to a physical chart nor analyze why a chart should have the layouts it has. As the visual acuity charts are made after a very strict specification, no new chart layouts will be made. Any new chart we would create would be considered useless without backing research and they could be misleading and misused by future opticians that in the end, could result in patients getting an inaccurate result.
+No security features, such as encrypted network traffic or protection against several tablets connecting to the same server at the same time, was implemented. Instead, it is left to the optician or whoever owns the hardware to make sure that a secure network is used. Since there is no patient data or other private information being transmitted or stored we did not see the need for secure connections.
 
-No security features, such as encrypted network traffic or protection against several tablets connecting to the same server at the same time, will be implemented. Instead, it is left to the optician or whoever owns the hardware to make sure that a secure network is used. Since there is no patient data or other private information being transmitted or stored we don't see the need for secure connections in this project.
-
-No automatic update system will be included, instead hardware owner will have to manually update both the Android application and the server. Automatic updating was not a core feature, and could therefore be saved for future work.
+No automatic update system was included, instead the hardware owner will have to manually update both the Android application and the server. Automatic updating was not a core feature, and could therefore be saved for future work.
 
 \section{Requirements}
 %For this project to be considered successful, the system must be able to display the chart chosen by the user. This means that the user have to be able to control which chart type to display on the monitor from an Android device. The types of charts that should be included are the four Axanivis charts, the upper, the lower, the one line and the single optotype chart. The user also has to be able to choose if the current chart should use the Sloan, Tumbling E, HVOT or LEA optotypes.
