Fixade lite tempusformer

--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -163,7 +163,7 @@ No automatic update system was included, instead the hardware owner will have to
 \section{Requirements}
 %For this project to be considered successful, the system must be able to display the chart chosen by the user. This means that the user have to be able to control which chart type to display on the monitor from an Android device. The types of charts that should be included are the four Axanivis charts, the upper, the lower, the one line and the single optotype chart. The user also has to be able to choose if the current chart should use the Sloan, Tumbling E, HVOT or LEA optotypes.
 
-For this project to be considered successful, the system must be able to display the chart chosen by the optician. This means that the optician has to be able to control which chart type to display on the monitor from an Android device. The types of charts that should be included are the four Axanivis charts (fig. \ref{fig:axanivis}), which is a project under development by P.G. Söderberg \cite{PGSoderbergOral}. The Axanivis charts are based on the ETDRS chart but are designed to be displayed on a digital screen instead of being printed on a physical chart. 
+For this project to be considered successful, the system had to be able to display the chart chosen by the optician. This means that the optician had to be able to control which chart type to display on the monitor from an Android device. The types of charts that were included are the four Axanivis charts (fig. \ref{fig:axanivis}), which comes from a project with the same name under development by P.G. Söderberg \cite{PGSoderbergOral}. The Axanivis charts are based on the ETDRS chart but are designed to be displayed on a digital screen instead of being printed on a physical chart. 
 
 \begin{figure}[ht!]
 \centering
@@ -194,8 +194,7 @@ For this project to be considered successful, the system must be able to display
 \label{fig:axanivis}
 \end{figure}
 
-
-The optician also have to be able to choose if the current chart should use the Sloan, Tumbling E, HVOT or LEA optotypes (fig. \ref{fig:optotypes_example1}). The Sloan and HVOT optoypes consists of a different sets of letters, the Tumbling E consists of the letter E rotated in different angles and LEA is a set of custom symbols. \cite{Colenbrander}
+The optician also had to be able to choose if the current chart should use the Sloan, Tumbling E, HVOT or LEA optotypes (fig. \ref{fig:optotypes_example1}). The Sloan and HVOT optoypes consists of a different sets of letters, the Tumbling E consists of the letter E rotated in different angles and LEA is a set of custom symbols. \cite{Colenbrander}
 
 \begin{figure}[ht!]
 \centering
@@ -223,22 +222,22 @@ The optician also have to be able to choose if the current chart should use the 
 
 %It is very important that the chart on the monitor displays all optotypes with the correct sizes and positions. In order to do this, the user must to be able control the distance from which the patient is watching the monitor. It is also very important that the correct sizes, in LogMAR (Logarithmic of the Minimum Angle of Resolution), which is a logarithmic unit of measurement dependant on the view angle of a patient \cite{Bailey}, is displayed on the Android device.
 
-It is very important that the chart on the monitor displays all optotypes with the correct sizes and positions. In order to do this, the optician must be able to input the distance from which the patient is watching the monitor. The sizes of the the optotypes are measured in LogMAR (Logarithmic of the Minimum Angle of Resolution), which is a logarithmic unit of measurement dependant on the view angle of a patient \cite{Bailey}. This means that the optotypes will be smaller when a patient sits close to the monitor and larger when a patient sits far away. This allows the optician to use the same LogMAR values during visual acuity tests no matter the distance the patient view the monitor.
+It was very important that the chart on the monitor displays all optotypes with the correct sizes and positions. In order to do this, the optician had to be able to input the distance from which the patient is watching the monitor. The sizes of the the optotypes are measured in LogMAR (Logarithmic of the Minimum Angle of Resolution), which is a logarithmic unit of measurement dependant on the view angle of a patient \cite{Bailey}. This means that the optotypes are smaller when a patient sits close to the monitor and larger when a patient sits far away. It also allows the optician to use the same LogMAR values during visual acuity tests no matter the distance the patient view the monitor.
 
 The intended user for this system is an optician, and should have all the necessary knowledge and education on how to perform an eye examination. The optician should not need any more than basic knowledge about an Android device, such as being able to start the device, connect to a wireless network, start an application and how to perform simple Android gestures. This does not mean that it has to be easy to install and set up, though it is a goal for future expansion. 
 
-The Android application should follow the Android design principles set up by Google \cite{android_design}. This makes the application behave similar to other Android applications which will result in users already familiar with Android feel familiar to this application as well.
+The Android application follows the Android design principles set up by Google \cite{android_design}. This made the application behave similar to other Android applications which results in users already familiar with Android feel familiar to this application as well.
 
-The system should also allow for automatic server detection so that opticians don't have to manually connect by entering IP addresses. This allows a quick and easy way to connect to a server. In order for the server detection to be considered working properly, it should detect a server on a stable network at least 90\% of the time. With a success rate of 90\%, it would be very uncommon to fail the detection twice in a row, while keeping the scanning time relatively low.
+The system allows for automatic server detection so that opticians don't have to manually connect by entering IP addresses. This allows for a quick and easy way to connect to a server. In order for the server detection to be considered working properly, it had to detect a server on a stable network at least 90\% of the time. With a success rate of 90\%, it was very uncommon to fail the detection twice in a row, while keeping the scanning time relatively low.
 
-As this project only aims for a working prototype of the system, it is very important that it is easy to continue the development and add more features without rewriting large parts of the code.
+As this project only aimed to complete a working prototype of the system, it was very important that it was easy to continue the development and add more features without rewriting large parts of the code.
 
 \section{Evaluation \label{sec:evaluation}}
-In order to evaluate if all requirements have been met, the system will undergo four tests. The goal of the first test is to make sure that the optician actually can choose a specific chart with specific optotypes to be viewed from a specific distance. This is done by the developers going through all charts, with all types of optotypes and setting the distance for each one of them. To achieve this, table \ref{tab:test1_empty} is used to systematically walk through every setting.
+In order to evaluate if all requirements had been met, the system underwent four tests. The goal of the first test was to make sure that the optician actually could choose a specific chart with specific optotypes to be viewed from a specific distance. This was done by the developers going through all charts, with all types of optotypes and setting the distance for each one of them. Table \ref{tab:test1_empty} was used to achieve this by systematically walk through every setting.
 
-The second test is to make sure that the optotypes have the correct sizes on the monitor. This test will be done by calculating the expected sizes of the optotypes in centimeters for different screen sizes with the help of Matlab. The calculated sizes will then be compared to the sizes output by the system and see if they match. If this is a match, the optotypes will be measured by a physical measurement tool such as a ruler or Vernier scale in order to make sure that they have the calculated size when they are displayed on the monitor. The physical measuring is required to make sure that the system works as intended in practice and not only in theory.
+The second test made sure that the optotypes had the correct sizes on the monitor. This test was done by calculating the expected sizes of the optotypes in centimeters for different screen sizes with the help of Matlab. The calculated sizes was then compared to the sizes output by the system. If there was a match, the optotypes was measured by a physical measurement tool such as a ruler or Vernier scale in order to make sure that they had the calculated size when they were displayed on the monitor. The physical measuring was required to make sure that the system worked as intended in practice and not only in theory.
 
-The third test will determine how user friendly the system is. This will be done by letting a test user with no previous knowledge of the system, attempt to connect to a server and perform some basic tasks like setting a specific chart with a specific optotype or setting a specific distance (App. \ref{app:usability}). If the test user testing has no previous knowledge of visual acuity charts, a brief explanation will be given so that the test doesn't fail because the test user, for example, doesn't know what "HVOT" is. Once the test is done, the test user will provide feedback pointing out possible faults in our design. This feedback will then be used to improve the design. If the test user can perform the entire test without help, the test is considered successful.
+The third test determined how user friendly the system was. This was done by letting a test user with no previous knowledge of the system, attempt to connect to a server and perform some basic tasks like setting a specific chart with a specific optotype or setting a specific distance (App. \ref{app:usability}). If the test user testing had no previous knowledge of visual acuity charts, a brief explanation was given so that the test did not fail because the test user, for example, did not know what "HVOT" was. Once the test was completed, the test user provided feedback pointing out possible faults in our design. This feedback was then used to improve the design. If the test user performd the entire test without help, the test was considered successful.
 
 The last test is a quantitative test to see how well the server detection performs. The test involves the Android application trying to detect a server on a stable WiFi a 100 times and see how many times the server was detected. This test can be done several times and the average number of detection's in a 100 tries will determine its success rate. Testing the system on anything other than a stable WiFi is unnecessary as it is only intended to work on a stable local network. If the optician's tablet cannot connect to their local WiFi reliably they might have problems, but the source of those problems is outside our project, and we cannot affect it.
 
