Fixade lite tempusformer

--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -239,7 +239,7 @@ The second test made sure that the optotypes had the correct sizes on the monito
 
 The third test determined how user friendly the system was. This was done by letting a test user with no previous knowledge of the system, attempt to connect to a server and perform some basic tasks like setting a specific chart with a specific optotype or setting a specific distance (App. \ref{app:usability}). If the test user testing had no previous knowledge of visual acuity charts, a brief explanation was given so that the test did not fail because the test user, for example, did not know what "HVOT" was. Once the test was completed, the test user provided feedback pointing out possible faults in our design. This feedback was then used to improve the design. If the test user performd the entire test without help, the test was considered successful.
 
-The last test is a quantitative test to see how well the server detection performs. The test involves the Android application trying to detect a server on a stable WiFi a 100 times and see how many times the server was detected. This test can be done several times and the average number of detection's in a 100 tries will determine its success rate. Testing the system on anything other than a stable WiFi is unnecessary as it is only intended to work on a stable local network. If the optician's tablet cannot connect to their local WiFi reliably they might have problems, but the source of those problems is outside our project, and we cannot affect it.
+The last test was a quantitative test to see how well the server detection performed. The test involved the Android application trying to detect a server on a stable WiFi a hundred times and see how many times the server was detected. This test was done several times and the average number of detections in a hundred tries determined its success rate. Testing the system on anything other than a stable WiFi was unnecessary as it was only intended to work on a stable local network. If the optician's tablet could not connect to their local WiFi reliably there might have been problems, but the source of those problems were outside of our project, and we could not affect it.
 
 \section{Related work}
 
